Item view- the back to the box text is too long  (bug #1546)

--- a/Zbang.Cloudents.Mvc4WebRole/Content/General.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/General.less
@@ -832,6 +832,7 @@ select.inputText {
     }
     h2{
         font-size: 15px;
+        height: 18px;
     }
     &.noArrow{
         padding-left:0;
