--- a/Zbang.Cloudents.Mvc4WebRole/Content/lang.ru-RU.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/lang.ru-RU.less
@@ -37,10 +37,10 @@ q {
     margin-bottom: 20px;
 }
 
-.itemActions .backWpr {
+/*.itemActions .backWpr {
     max-width: -webkit-calc(50% - 240px);
     max-width: calc(50% - 240px);
-}
+}*/
 /*#endregion */
 /*#region box page */
 .inviteFriendBtn.btn3 {
